Agregacion de contenido del qr y el scanner falta agregar el compilacion que agregue api y pagina se llamen y den respuesta

--- a/asistencias/package.json
+++ b/asistencias/package.json
@@ -1,7 +1,6 @@
 {
   "name": "asistencias",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "html5-qrcode": "^2.3.8"
-  }
+  },
+  "description": ""
 }
