--- a/asistencias/package.json
+++ b/asistencias/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "postcss asistencias_obras/static/css/styles.css -o asistencias_obras/static/css/output.css"
+  
   },
   "keywords": [],
   "author": "",
